force-app/main/default/objects/Case/fields/ABCD_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>ABCD_Case_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABCD Case Detail</label>
    <referenceTo>ABCD_Case_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>