force-app/main/default/objects/Case/fields/ABFL_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Case_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABFL Case Detail</label>
    <referenceTo>ABFL_Case_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>