force-app/main/default/objects/Case/fields/ABFL_Incoming_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Incoming_Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is created as part of PR970457-373.</description>
    <label>Incoming Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>