force-app/main/default/objects/Case/fields/ABHI_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Case_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABHI Case Detail</label>
    <referenceTo>ABHI_Case_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>