force-app/main/default/objects/Case/fields/ABSLAMC_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>ABSLAMC_Case_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABSLAMC Case Detail</label>
    <referenceTo>ABSLAMC_Case_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>