force-app/main/default/objects/Case/fields/ABSLI_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>ABSLI_Case_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the ABSLI Case Detail record Id.</description>
    <label>ABSLI Case Detail</label>
    <referenceTo>ABSLI_Case_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>