force-app/main/default/objects/Case/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity</label>
    <type>Checkbox</type>
</CustomField>