force-app/main/default/objects/Case/fields/Ageing_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Business_Days__c</fullName>
    <description>This field calculates the case age based on the BusinessHoursId field in case</description>
    <label>Ageing (Business Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>