force-app/main/default/objects/Case/fields/Ageing_Number_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Number_Of_Days__c</fullName>
    <description>&quot;Ageing here is calculated on calendar days from 
Open cases - Today() - created date
Closed case - resolved date - created date&quot;</description>
    <formula>IF(
    NOT(ISPICKVAL(Status, &quot;Resolved&quot;)),
    TODAY() - DATEVALUE(CreatedDate),
    IF(
        ISPICKVAL(Status, &quot;Resolved&quot;),
        IF(
            NOT(ISBLANK(ClosedDate)),
            DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),
            0 
        ),
        0  
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (Number Of Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>