force-app/main/default/objects/Case/fields/all_Emails__c.field-meta.xml
<CustomField>
    <fullName>all_Emails__c</fullName>
    <description>This field is created for Account Email, Contact Email, Web Email, Lead Email</description>
    <formula>IF( AND(NOT(ISBLANK( AccountId )), Account.IsPersonAccount ) , Account.PersonContact.Email , IF( NOT(ISBLANK(ContactId)) , Contact.Email, IF( NOT(ISBLANK(SuppliedEmail)) , SuppliedEmail, Lead__r.Email ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>