force-app/main/default/objects/Case/fields/Allow_file_upload__c.field-meta.xml
<CustomField>
    <fullName>Allow_file_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow file upload</label>
    <type>Checkbox</type>
</CustomField>