force-app/main/default/objects/Case/fields/Am_I_Manager__c.field-meta.xml
<CustomField>
    <fullName>Am_I_Manager__c</fullName>
    <formula>Owner:User.ManagerId == $User.Id || Owner:User.Manager.Manager.Id == $User.Id || Owner:User.Manager.Manager.Manager.Id == $User.Id || Owner:User.Manager.Manager.Manager.Manager.Id == $User.Id || Owner:User.Manager.Manager.Manager.Manager.Manager.Id == $User.Id</formula>
    <label>Am I Manager</label>
    <type>Checkbox</type>
</CustomField>