force-app/main/default/objects/Case/fields/AmIOwner__c.field-meta.xml
<CustomField>
    <fullName>AmIOwner__c</fullName>
    <formula>OwnerId == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Am I owner</label>
    <type>Checkbox</type>
</CustomField>