force-app/main/default/objects/Case/fields/ANI_Number__c.field-meta.xml
<CustomField>
    <fullName>ANI_Number__c</fullName>
    <label>ANI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>