force-app/main/default/objects/Case/fields/ASF_Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>ASF_Is_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read only field, if true, indicates that the case was cloned from another case. Get original case id in ParentId field. Reporting purpose only.</description>
    <label>Is Clone?</label>
    <type>Checkbox</type>
</CustomField>