force-app/main/default/objects/Case/fields/ASF_Is_Cloneable__c.field-meta.xml
<CustomField>
    <fullName>ASF_Is_Cloneable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read only field, not exposed on UI. Gets value from the related Case Category Config record on Case creation only.</description>
    <label>Is Cloneable?</label>
    <type>Checkbox</type>
</CustomField>