force-app/main/default/objects/Case/fields/ASF_Issue_Code__c.field-meta.xml
<CustomField>
    <fullName>ASF_Issue_Code__c</fullName>
    <description>ABCL APIs will provide an issue code on the case to identify the CCC record associated with it</description>
    <label>Issue Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>