force-app/main/default/objects/Case/fields/Assign_Me_list_button__c.field-meta.xml
<CustomField>
    <fullName>Assign_Me_list_button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Me list button</label>
    <type>Checkbox</type>
</CustomField>