force-app/main/default/objects/Case/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <formula>Owner:User.Assigned_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Team</label>
    <type>Text</type>
</CustomField>