force-app/main/default/objects/Case/fields/Attachment_Status__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Status__c</fullName>
    <label>Attachment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>