force-app/main/default/objects/Case/fields/AttachmentDone__c.field-meta.xml
<CustomField>
    <fullName>AttachmentDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AttachmentDone</label>
    <type>Checkbox</type>
</CustomField>