force-app/main/default/objects/Case/fields/Auto_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in ABSLI when Mandatory Checklist is not populated, then move to next stage sets Auto Rejected Flag to true.</description>
    <label>Auto Rejected</label>
    <type>Checkbox</type>
</CustomField>