force-app/main/default/objects/Case/fields/Bio_on_channel__c.field-meta.xml
<CustomField>
    <fullName>Bio_on_channel__c</fullName>
    <label>Bio on channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>