force-app/main/default/objects/Case/fields/Bot_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Bot_Feedback__c</fullName>
    <label>Bot Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Classification</fullName>
            </value>
            <value>
                <fullName>Manually case created</fullName>
            </value>
            <value>
                <fullName>Uncategorised</fullName>
            </value>
            <value>
                <fullName>Multiple Intent</fullName>
            </value>
            <value>
                <fullName>Change as per Customer Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>