force-app/main/default/objects/Case/fields/Branch_Master__c.field-meta.xml
<CustomField>
    <fullName>Branch_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Master</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>