force-app/main/default/objects/Case/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <formula>IF(ISPICKVAL(Business_Unit__c, 'ABSLAMC'), Owner:User.Branch_Name__c , Asset.Branch__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>