force-app/main/default/objects/Case/fields/BRE_Source__c.field-meta.xml
<CustomField>
    <fullName>BRE_Source__c</fullName>
    <formula>IF(
	AND(
		ISPICKVAL(Account.LOB__pc, &apos;Digital&apos;),
		ISPICKVAL(Source__c, &apos;IVR-no email&apos;)
	),
	&apos;a3s_rm&apos;,
	IF(
		AND(
			ISPICKVAL(Account.LOB__pc, &apos;Digital&apos;),
			TEXT(Source__c) &lt;&gt; &apos;IVR-no email&apos;
		),
		&apos;a3s&apos;, 
		IF(
			AND(
				OR(
					ISPICKVAL(Account.LOB__pc, &apos;Retail - Secured&apos;),
					ISPICKVAL(Account.LOB__pc, &apos;Retail - Unsecured&apos;)
				),
				ISPICKVAL(Source__c, &apos;IVR-no email&apos;)
			),
			&apos;finnone_rm&apos;, 
			IF(
				AND(
					OR(
						ISPICKVAL(Account.LOB__pc, &apos;Retail - Secured&apos;),
						ISPICKVAL(Account.LOB__pc, &apos;Retail - Unsecured&apos;)
					),
					TEXT(Source__c) &lt;&gt; &apos;IVR-no email&apos;
				),
				&apos;finnone&apos;, 
				IF(
					AND(
						ISPICKVAL(Account.LOB__pc, &apos;Corporate&apos;),
						ISPICKVAL(Source__c, &apos;RM-no email&apos;)
					),
					&apos;corporate_rm&apos;, 
					IF(
						AND(
							ISPICKVAL(Account.LOB__pc, &apos;Corporate&apos;),
							TEXT(Source__c) &lt;&gt; &apos;RM-no email&apos;
						), 
						&apos;corporate&apos;, 
						null 
					)
				)
			)
		)
	) 
)</formula>
    <label>BRE Source</label>
    <type>Text</type>
</CustomField>