force-app/main/default/objects/Case/fields/Bulk_Action__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Action__c</fullName>
    <label>Bulk Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>