force-app/main/default/objects/Case/fields/Bulk_CaseDetail_JSON__c.field-meta.xml
<CustomField>
    <fullName>Bulk_CaseDetail_JSON__c</fullName>
    <label>Bulk CaseDetail JSON</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>