force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABWM</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
                <isActive>false</isActive>
                <label>Payment</label>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>