force-app/main/default/objects/Case/fields/Calling_Source__c.field-meta.xml
<CustomField>
    <fullName>Calling_Source__c</fullName>
    <label>Calling Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATS</fullName>
            </value>
            <value>
                <fullName>Ubona BOT</fullName>
            </value>
            <value>
                <fullName>CRM (In-House)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>