force-app/main/default/objects/Case/fields/Case_Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Team__c</fullName>
    <description>This field to store the Queue Name when Assigned to Team.</description>
    <label>Case Assigned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>