force-app/main/default/objects/Case/fields/Case_Details_JSON__c.field-meta.xml
<CustomField>
    <fullName>Case_Details_JSON__c</fullName>
    <description>this field is used in the backend for inbound integration to hold an Case details data</description>
    <label>Case Details JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>