force-app/main/default/objects/Case/fields/Case_SLA_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Threshold_1__c</fullName>
    <label>Case SLA Threshold 1</label>
    <type>DateTime</type>
</CustomField>