force-app/main/default/objects/Case/fields/Case_SLA_Threshold_2__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Threshold_2__c</fullName>
    <label>Case SLA Threshold 2</label>
    <type>DateTime</type>
</CustomField>