force-app/main/default/objects/Case/fields/Case_SLA_Threshold_3__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Threshold_3__c</fullName>
    <label>Case SLA Threshold 3</label>
    <type>DateTime</type>
</CustomField>