force-app/main/default/objects/Case/fields/Case_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage_Change_Date__c</fullName>
    <label>Case Stage Change Date</label>
    <type>DateTime</type>
</CustomField>