force-app/main/default/objects/Case/fields/Categorization_Date__c.field-meta.xml
<CustomField>
    <fullName>Categorization_Date__c</fullName>
    <label>Categorization Date</label>
    <type>DateTime</type>
</CustomField>