force-app/main/default/objects/Case/fields/CCC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CCC_External_Id__c</fullName>
    <description>This field is going to store the CTST External Id.</description>
    <label>CCC External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>