force-app/main/default/objects/Case/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <label>ChannelType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>