force-app/main/default/objects/Case/fields/ClaimNo__c.field-meta.xml
<CustomField>
    <fullName>ClaimNo__c</fullName>
    <formula>ABHI_Case_Detail__r.Claim__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim</label>
    <type>Text</type>
</CustomField>