force-app/main/default/objects/Case/fields/ClaimNo_Text__c.field-meta.xml
<CustomField>
    <fullName>ClaimNo_Text__c</fullName>
    <description>Used by APIs to update claim field for ABHI</description>
    <label>ClaimNo Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>