force-app/main/default/objects/Case/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <formula>IF(
    ISPICKVAL(Business_Unit__c, &apos;ABML&apos;),
    IF(
        ISPICKVAL(Account.ABML_Contact_Type__c, &apos;Branch&apos;),
        Account.ABML_Branch_Code__c,
        IF(
            ISPICKVAL(Account.ABML_Contact_Type__c, &apos;Franchisee&apos;),
            Account.ABML_Franchisee_Code__c,
            Account.ABML_Client_ID__pc
        )
    ),
    Account.Client_Code__c
)</formula>
    <label>Client Code</label>
    <type>Text</type>
</CustomField>