force-app/main/default/objects/Case/fields/Client_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Code_Text__c</fullName>
    <label>Z Internal CCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>