force-app/main/default/objects/Case/fields/Closure_reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_reason__c</fullName>
    <label>Closure reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>