force-app/main/default/objects/Case/fields/Closure_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Closure_Remarks__c</fullName>
    <label>Closure Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>