force-app/main/default/objects/Case/fields/Collateral_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Handover_Date__c</fullName>
    <label>Collateral Handover Date</label>
    <type>Date</type>
</CustomField>