force-app/main/default/objects/Case/fields/Console_Zone__c.field-meta.xml
<CustomField>
    <fullName>Console_Zone__c</fullName>
    <formula>Asset.Console_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Console Zone</label>
    <type>Text</type>
</CustomField>