force-app/main/default/objects/Case/fields/Cover_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Cover_Code_Text__c</fullName>
    <label>Cover Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>