force-app/main/default/objects/Case/fields/Created_by_ONEABC__c.field-meta.xml
<CustomField>
    <fullName>Created_by_ONEABC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by ONEABC</label>
    <type>Checkbox</type>
</CustomField>