force-app/main/default/objects/Case/fields/Created_By_User_formula__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_formula__c</fullName>
    <formula>IF(  ISPICKVAL( Business_Unit__c, &apos;ABSLAMC&apos;), IF(CreatedById =  $User.Id, &apos;true&apos;, &apos;false&apos;) , CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>