force-app/main/default/objects/Case/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>IF( TEXT(Business_Unit__c)  = &quot;ABSLIG&quot;, DATETIMEVALUE(CreatedDate), CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>