force-app/main/default/objects/Case/fields/Created_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Range__c</fullName>
    <label>Created Date Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>