force-app/main/default/objects/Case/fields/Created_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Value__c</fullName>
    <formula>IF( TEXT(Business_Unit__c) = &quot;ABSLI&quot;, DATEVALUE(CreatedDate), DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Value</label>
    <type>Date</type>
</CustomField>