force-app/main/default/objects/Case/fields/Customer_Member_Text__c.field-meta.xml
<CustomField>
    <fullName>Customer_Member_Text__c</fullName>
    <label>Customer Member Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>