force-app/main/default/objects/Case/fields/Customer_name_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_name_formula__c</fullName>
    <formula>IF(
    AND(Account.IsPersonAccount, ISPICKVAL(Account.Business_Unit__c, &quot;ABHI&quot;)),
    TEXT(Account.Salutation) + &apos; &apos; + Account.FirstName + &apos; &apos; + Account.LastName,
    IF(
        AND(Account.IsPersonAccount, ISPICKVAL(Account.Business_Unit__c, &quot;ABSLI&quot;)),
        Account.Full_Name__pc,
        IF(
            Account.IsPersonAccount,
            Account.FirstName + &apos; &apos; + Account.LastName,
            IF(
                AND(Account.IsPersonAccount, ISPICKVAL(Account.Business_Unit__c, &quot;ABML&quot;)),
                TEXT(Account.Salutation) + &apos; &apos; + Account.FirstName + &apos; &apos; + Account.LastName,
                IF(
                    Account.IsPersonAccount,
                    TEXT(Account.Salutation) + &apos; &apos; + Account.FirstName + &apos; &apos; + Account.LastName,
                    IF(
                        ISBLANK(Account.Name),
                        Lead__r.FirstName + &apos; &apos; + Lead__r.LastName,
                        Account.Name
                    )
                )
            )
        )
    )
)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>