force-app/main/default/objects/Case/fields/Customer_Payload__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payload__c</fullName>
    <description>Used in CreateCaseAPI</description>
    <label>Customer Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>