force-app/main/default/objects/Case/fields/CXO__c.field-meta.xml
<CustomField>
    <fullName>CXO__c</fullName>
    <label>CXO tagged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>