force-app/main/default/objects/Case/fields/Dont_Run_Processing_Rules__c.field-meta.xml
<CustomField>
    <fullName>Dont_Run_Processing_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Run Processing Rules</label>
    <type>Checkbox</type>
</CustomField>