force-app/main/default/objects/Case/fields/eBOT_Email_Draft__c.field-meta.xml
<CustomField>
    <fullName>eBOT_Email_Draft__c</fullName>
    <description>Field created to store Email body received from UNFYD Gen AI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>eBOT Email Draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>