force-app/main/default/objects/Case/fields/eBOT_Email_Draft_initial__c.field-meta.xml
<CustomField>
    <fullName>eBOT_Email_Draft_initial__c</fullName>
    <description>Field created to track the initial value of the UNFYD response for the case email body</description>
    <encryptionScheme>None</encryptionScheme>
    <label>eBOT Email Draft initial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>