force-app/main/default/objects/Case/fields/Email_Team__c.field-meta.xml
<CustomField>
    <fullName>Email_Team__c</fullName>
    <formula>Text(Owner:User.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Team</label>
    <type>Text</type>
</CustomField>