force-app/main/default/objects/Case/fields/EmailMessageIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageIdentifier__c</fullName>
    <label>EmailMessageIdentifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>