force-app/main/default/objects/Case/fields/Entity_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Entity_Reference_No__c</fullName>
    <description>This field is used in ABSLI IRDA Integration</description>
    <label>Entity Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>