force-app/main/default/objects/Case/fields/Escalated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date_Time__c</fullName>
    <label>Escalated Date/Time</label>
    <type>DateTime</type>
</CustomField>