force-app/main/default/objects/Case/fields/Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Comments__c</fullName>
    <description>ABHI</description>
    <formula>Escalation_Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Comments</label>
    <type>Text</type>
</CustomField>