force-app/main/default/objects/Case/fields/Escalation_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Indicator__c</fullName>
    <formula>IF(ISBLANK(Escalated_Date_Time__c), IMAGE(&quot;/resource/ASF_GreenFlag&quot;, &quot;green&quot;, 30, 30),IMAGE(&quot;/resource/ASF_RedFlag&quot;, &quot;red&quot;, 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Indicator</label>
    <type>Text</type>
</CustomField>