force-app/main/default/objects/Case/fields/Feature_Skipper_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feature_Skipper_Flag__c</fullName>
    <label>Feature Skipper Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKIP_ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>SKIP_VALIDATE_RECAT_PARAM</fullName>
            </value>
            <value>
                <fullName>SKIP_STAGE_ENTRY_CHECKS</fullName>
            </value>
            <value>
                <fullName>SKIP_PERI_GENERATE</fullName>
            </value>
            <value>
                <fullName>SKIP_CLOSE_CASE_CHECK</fullName>
            </value>
            <value>
                <fullName>SKIP_OWNER_CHECK</fullName>
            </value>
            <value>
                <fullName>SKIP_STAGE_EXIT_CHECKS</fullName>
            </value>
            <value>
                <fullName>SKIP_VALIDATE_CHECKLISTS</fullName>
            </value>
            <value>
                <fullName>SKIP_VALIDATE_TASKS</fullName>
            </value>
            <value>
                <fullName>SKIP_APPROVAL_CHECKS</fullName>
            </value>
            <value>
                <fullName>SKIP_VALIDATION_CHECKS</fullName>
            </value>
            <value>
                <fullName>SKIP_INTEGRATION_CHECKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>