force-app/main/default/objects/Case/fields/Filter_Date__c.field-meta.xml
<CustomField>
    <fullName>Filter_Date__c</fullName>
    <formula>ABSLI_Case_Detail__r.Anniversary_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Date</label>
    <type>Date</type>
</CustomField>