force-app/main/default/objects/Case/fields/First_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Case_Closed_Date__c</fullName>
    <description>The First Closed Date of Case. Since ClosedDate will be overridden, keeping this for reference</description>
    <label>First Case Closed Date</label>
    <type>DateTime</type>
</CustomField>