force-app/main/default/objects/Case/fields/Followers_on_channel__c.field-meta.xml
<CustomField>
    <fullName>Followers_on_channel__c</fullName>
    <label>Followers on channel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>