force-app/main/default/objects/Case/fields/ForceModifySLAHistory__c.field-meta.xml
<CustomField>
    <fullName>ForceModifySLAHistory__c</fullName>
    <description>Change in this field forces SLA history recalculation</description>
    <label>Force Modify SLA History(Backend)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>