force-app/main/default/objects/Case/fields/Foreclosure_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Payment_Received_Date__c</fullName>
    <label>Foreclosure Payment Received Date</label>
    <type>Date</type>
</CustomField>