force-app/main/default/objects/Case/fields/FTR__c.field-meta.xml
<CustomField>
    <fullName>FTR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTR</label>
    <type>Checkbox</type>
</CustomField>