force-app/main/default/objects/Case/fields/has_CheckLists__c.field-meta.xml
<CustomField>
    <fullName>has_CheckLists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has CheckLists</label>
    <type>Checkbox</type>
</CustomField>