force-app/main/default/objects/Case/fields/Has_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Open Tasks</label>
    <type>Checkbox</type>
</CustomField>