force-app/main/default/objects/Case/fields/Hospital_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Code_Text__c</fullName>
    <label>Hospital Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>