force-app/main/default/objects/Case/fields/HWC__c.field-meta.xml
<CustomField>
    <fullName>HWC__c</fullName>
    <label>HWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>