force-app/main/default/objects/Case/fields/IGMS_Complaint_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Complaint_Type_Code__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>IGMS Complaint Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>