force-app/main/default/objects/Case/fields/Initial_First_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_First_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial/First Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>